# tt_riingd

./: Cargo.toml  LICENSE.md  README.md  ROADMAP.md  install.sh  install_user.sh  riingctl  uninstall.sh
.github/workflows/: ci.yml
config/: config.yml
resources/: 99-tt-riingd.rules  tt_riingd.service
src/: app_context.rs  application.rs  cli.rs  config.rs  controller.rs  coordinator.rs  event.rs  fan_controller.rs  fan_curve.rs  interface.rs  lib.rs  main.rs  mappings.rs  sensors.rs  task_manager.rs  tasks.rs
src/drivers/: mod.rs  tt_riing_quad.rs
src/drivers/tt_riing_quad/: controller.rs  device_io.rs  mod.rs  protocol.rs  tt_riing_quad.rs  ttriing_quad.rs
src/providers/: app_state.rs  broadcast.rs  config_watcher.rs  dbus.rs  fan_color.rs  mod.rs  monitoring.rs  traits.rs
src/temperature_sensors/: lm_sensor.rs  mod.rs
