[package]
name = "tt_riing_rs"
version = "1.0.0"
edition = "2024"

[dependencies]
# Async
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"

# OS
zbus = { version = "5.6.0", default-features = false, features = ["tokio"] }
hidapi = { version = "2.6" }
daemonize = "0.5"
signal-hook = { version = "0.3", features = ["iterator"] }
event-listener = "5.4.0"

# Config
# unconfig = { git = "https://github.com/rojer-98/unconfig.git", default-features = false }

# Log
syslog = "7.0"
log = "0.4.27"

# Helpers
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
zvariant = { version = "5.5.1" }
async-trait = "0.1.88"
futures = "0.3.31"
lm-sensors = "0.3.2"
dashmap = "7.0.0-rc2"
serde_yaml = "0.9.34"
clap = { version = "4.5.38", features = ["derive"] }
once_cell = "1.21.3"
