[package]
name = "tt_riingd"
version = "1.0.0"
edition = "2024"

[features]
tokio-console = []

[dependencies]
# Async
tokio = { version = "1.45.0", features = ["macros", "rt-multi-thread", "sync", "signal"] }
tokio-stream = "0.1.17"
console-subscriber = "0.4.1"

# OS
zbus = { version = "5.6.0", default-features = false, features = ["tokio"] }
hidapi = { version = "2.6" }
daemonize = "0.5"
signal-hook = { version = "0.3", features = ["iterator"] }
event-listener = "5.4.0"

# Config
# unconfig = { git = "https://github.com/rojer-98/unconfig.git", default-features = false }

# Log
syslog = "7.0"
log = "0.4.27"

# Helpers
uuid = { version = "1.7", features = ["v4"] }
anyhow = "1.0"
rand = "0.9.1"
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
zvariant = { version = "5.5.1" }
async-trait = "0.1.88"
futures = "0.3.31"
lm-sensors = "0.3.2"
dashmap = "7.0.0-rc2"
serde_yaml = "0.9.34"
clap = { version = "4.5.38", features = ["derive"] }
once_cell = "1.21.3"
tokio-util = "0.7.15"
notify = "8.0.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"              # async testing utilities
mockall = "0.12"                # mocking framework for traits
tempfile = "3.8"                # temporary files for config tests
serial_test = "3.0"             # run tests serially when needed
pretty_assertions = "1.4"       # better assertion output
proptest = "1.4"                # property-based testing
